web/packages/artsy/css/src/components/nav.scss
$sidebar-bg-color: lighten($theme-dark-color,10%);
nav[primary] {font-family:$theme-font-family-bold;width:$nav-sidebar-width;height:100%;position:fixed;top:0;bottom:0;left:-$nav-sidebar-width;background:$sidebar-bg-color;z-index:9;line-height:1;
  &::after {display:block;content:'';position:absolute;top:100%;left:0;width:100%;height:25%;background:$sidebar-bg-color;}
  // All links
  a {display:block;color:$theme-extra-light-color;text-decoration:none !important;}
  // Trigger link
  [trigger]{text-align:center;line-height:0;padding:0.75rem 0.75rem 0.75rem 0.82rem;margin:0;font-size:1.7rem;position:absolute;top:0;left:100%;z-index:99;background:transparent;@include transition(all 0.25s ease);
    span {position:relative;display:inline-block;text-transform:uppercase;font-family:$theme-font-family-bold;}
    b {font-size:80%;position:absolute;top:0.9rem;left:2rem;font-weight:normal;}
  }
  // Inner container
  .inner-1 {width:100%;height:100%;position:relative;@include scrollOverflow;}
  [searchable]{display:none;position:relative;
    i {font-size:22px;position:absolute;top:13px;left:10px;color:lighten($sidebar-bg-color, 30%);}
    input {color:#fff;font-family:$theme-font-family;padding:1rem 1rem 0.9rem 2.25rem;display:block;width:100%;width:100%;background:lighten($sidebar-bg-color, 8%);border:0;outline:0;@include border-radius(0);}
  }
  [slideable]{@include transform(translate3d(0,0,0));@include transition(transform $revealers-animate-time $revealers-animate-function);
    &.show-subs, &.show-subs + .bottom {@include transform(translate3d(-100%,0,0));}
  }
  // All menus
  ul {font-size:115%;list-style:none;padding:0;text-transform:uppercase;
    &.majority {padding-top:2rem;}
    &.sub {font-size:100%;visibility:hidden;opacity:0;position:absolute;top:0;left:100%;width:100%;@include transition(all $revealers-animate-time $revealers-animate-function)}
    li {
      a {padding:1rem 2rem;@include transition(color 0.35s ease);
        &:hover {color:$theme-primary-color;}
      }
      .has-subnavs {position:relative;
        i {position:absolute;top:11px;right:15px;font-size:1.5rem;}
        //.sub-trigger {z-index:2;color:#fff;display:inline-block;position:absolute;top:0;right:0;bottom:0;font-size:1.5rem;}//background:lighten($sidebar-bg-color, 10%);}
      }
      &.sub-active {
        .sub {visibility:visible;opacity:1;}
      }
      &.unsub {
        a {font-size:3rem;padding:0 0 0 1rem;
          i {font-size:3rem;position:relative;top:5px;}
        }
      }
    }
  }
  .bottom {text-transform:uppercase;}
}

.pg-home {
  nav[primary] [trigger]{top:0;}
}

.dock-nav-icon {
  nav [trigger] {top:0 !important;background:rgba($theme-dark-color,0.8);
    b {display:none;}
  }
}

[revealing]{@include transform(translate3d(0,0,0));@include transition(transform $revealers-animate-time $revealers-animate-function);}
html.nav-open {
  [revealing] {@include transform(translate3d($nav-sidebar-width,0,0));}
  nav [trigger] b {display:none;}
  //#c-level-1 main::before {content:'';display:block;position:fixed;top:0;left:0;width:150%;min-height:150%;bottom:0;background:rgba(0,0,0,0.5);z-index:99;overflow:hidden;}
  nav::after {content:'';display:block;position:absolute;top:0;left:100%;width:500%;min-height:150%;background:rgba(0,0,0,0.5);z-index:98;}
}

@media screen and (min-width:$screen-sm){
  nav[primary]{
    [trigger]{top:1.5rem;margin:0.5rem;}
    .bottom {position:absolute;bottom:0;left:0;right:0;width:100%;}
    [searchable]{display:block;}
  }

  // Flyout menus on NOT mobile and NOT touch device
  html.no-touch nav[primary] {
    .inner-1 {overflow:visible;}
    [slideable]{
      &.show-subs, &.show-subs + .bottom {@include transform(none);}
    }
    ul.sub li.unsub {display:none;}
    ul.majority {
      li {position:relative;
        .sub {padding:0.5rem 0;width:auto;white-space:nowrap;}
        &.sub-active .sub {visibility:hidden;opacity:0;}
        &.nav-has-sub:hover {
          ul.sub {visibility:visible;opacity:1;background:rgba($sidebar-bg-color,0.9);}
        }
      }
    }
  }
}

